deploy/platform/base/jaeger.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jaeger
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jaeger
  template:
    metadata:
      labels:
        app: jaeger
    spec:
      containers:
        - name: jaeger
          image: jaegertracing/all-in-one:1.57
          ports:
            - containerPort: 16686
              name: ui
            - containerPort: 4317
              name: otlp-grpc
            - containerPort: 4318
              name: otlp-http
            - containerPort: 14269
              name: metrics
---
apiVersion: v1
kind: Service
metadata:
  name: jaeger
spec:
  selector:
    app: jaeger
  ports:
    - port: 16686
      targetPort: ui
      name: ui
    - port: 4317
      targetPort: otlp-grpc
      name: otlp-grpc
    - port: 4318
      targetPort: otlp-http
      name: otlp-http
    - port: 14269
      targetPort: metrics
      name: metrics
